--- a/src/components/sortingvisualizer.css
+++ b/src/components/sortingvisualizer.css
@@ -17,7 +17,7 @@
   border-bottom: 1px solid grey;
 }
 .button-container {
-  display: flex;
+  /* display: flex; */
   justify-content: center;
 }
 
